--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body{
 
 /* Navbar and top of page */
 
+a{
+    color: white;
+    text-decoration: none;
+}
+
+li :hover{
+    color: rgb(0, 0, 0);
+}
+
 li{
     list-style: none;
 }
@@ -20,7 +29,7 @@ li{
 ul{
     padding-top: 18px;
     height: 80px;
-    background-color: rgba(255, 56, 56, 0.836);
+    background-color:  rgb(177, 38, 38);
 }
 
 .navbar{
@@ -30,8 +39,8 @@ ul{
 }
 
 .navbuttons{
-    padding-left: 130px;
-    padding-right: 130px;
+    padding-left:  196.9px;
+    padding-right: 196.9px;
     display: inline;
 }
 
@@ -82,12 +91,14 @@ h1{
     padding-bottom: 30px;
     display: flex;
     justify-content: center;
-    /* background-image: url(images/81yMudNSLnL._AC_SX522_.jpg);
-    background-size: cover; */
+    background-color: #000000;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg fill-opacity='0.58'%3E%3Cpolygon fill='%23220000' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23440000' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%23660000' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23880000' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%23A00' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .homepage{
-    background-color: rgba(255, 56, 56, 0.836);
+    background-color: rgb(177, 38, 38);
     height: 1000px;
     width: 800px;
 }
