--- a/services/services.css
+++ b/services/services.css
@@ -163,6 +163,7 @@ h1{
     align-items: flex-start;
     flex-direction: column;
     margin: 10px 50px;
+    color: black;
 }
 
 .price-box li {
@@ -171,10 +172,30 @@ h1{
 
 .silver {
     height: 200px;
+    background-color: #C0C0C0;
+}
+
+.silver ul {
+    background-color: #C0C0C0;
 }
 
 .gold {
     height: 300px;
+    background-color: #FFD700;
+}
+
+.gold ul {
+    background-color: #FFD700;
+}
+
+.platnium {
+    background-color: #7b98b9;
+}
+
+.extra {
+    width: 90%;
+    margin: 0 auto;
+    height: 25%;
 }
 
 .price-box h3{
@@ -182,15 +203,23 @@ h1{
 }
 
 #silver {
-    color: #C0C0C0;
+    color: #6d6d6d;
 }
 
 #gold {
-    color: #FFD700;
+    color: #a38b00;
 }
 
 #platnium{
-    color: #7b98b9;
+    color: #3a516b;
+}
+
+.platnium{
+    background-color: #7b98b9;
+}
+
+.platnium ul {
+    background-color: #7b98b9;
 }
 
 p{
