--- a/services/services.css
+++ b/services/services.css
@@ -148,7 +148,7 @@ h1{
 .price-box {
     width: 300px;
     height: 400px;
-    background-color: black;
+    background-color: #c95959;
     margin: 15px;
     border-radius: 30px;
     font-family: 'ZCOOL KuaiLe', cursive;
@@ -157,7 +157,7 @@ h1{
 
 .price-box ul {
     width: auto;
-    background-color: black;
+    background-color: #c95959;
     text-align: left;
     display: flex;
     align-items: flex-start;
@@ -170,8 +170,19 @@ h1{
     margin: 8px 0px 8px 0px;
 }
 
+.price-box li img {
+    width: 125px;
+    height: 125px;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-content: flex-end;
+    margin-left: 30%;
+}
+
 .silver {
-    height: 200px;
+    height: 300px;
     background-color: #C0C0C0;
 }
 
@@ -180,7 +191,7 @@ h1{
 }
 
 .gold {
-    height: 300px;
+    height: 350px;
     background-color: #FFD700;
 }
 
@@ -193,9 +204,12 @@ h1{
 }
 
 .extra {
-    width: 90%;
+    width: 75%;
     margin: 0 auto;
     height: 25%;
+    color: black;
+    text-align: center;
+    margin: 0 auto;
 }
 
 .price-box h3{
@@ -234,6 +248,36 @@ p{
 .breathtaking{
     flex-wrap: wrap;
     padding: 10px;
+}
+
+.order-button{
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    padding: 5px;
+}
+
+.order-button button {
+    width: 100px;
+    height: 80px;
+    font-size: 25px;
+    font-family: 'Mulish', sans-serif;
+    background-color: rgb(0, 132, 255);
+    border-radius: 15px;
+    color: black;
+}
+
+.order-button button:active {
+    background-color: black;
+    color: rgb(0, 132, 255);
+    transition-duration: .3s;
+    padding: 0px;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px rgb(71, 0, 0);
+    text-align: center;
+    cursor: pointer;
+    outline: none;
 }
 
 .footer-items {
