--- a/contact/contact.css
+++ b/contact/contact.css
@@ -144,6 +144,14 @@ textarea{
 }
 .feedback p{
     text-align: center;
+    margin-bottom: 20px;
+}
+
+.positions{
+    padding: 10px;
+    border-right: white solid 1.5px;
+}
+.positions p{
     margin-bottom: 10px;
 }
 /* Footer Content */
