--- a/style.css
+++ b/style.css
@@ -12,9 +12,77 @@ body{
     background-image: url();
 }
 
-/* Navbar and top of page */
+/* sidebar */
 
-a{
+.navbar{
+    position: fixed;
+    width: 60px;
+    height: 100%;
+    background: #8d1b1b;
+    transition: 0.5s;
+    overflow: hidden;
+    z-index: 111;
+}
+
+.navbar:hover{
+    width: 300px;
+}
+
+.navbar ul{
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    color: #fff;
+}
+
+.navbar ul li{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    position: relative;
+    width: 100%;
+    list-style: none;
+}
+
+.navbar ul li a{
+    position: relative;
+    display: block;
+    width: 100%;
+    display: flex;
+    text-decoration: none;
+    color: #fff;
+    font-family: 'ZCOOL QingKe HuangYou', cursive;
+}
+
+.navbar ul li a .icon{
+    position: relative;
+    display: block;
+    min-width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+}
+
+.navbar ul li a .title{
+    position: relative;
+    display: block;
+    padding: 0 10px;
+    height: 60px;
+    line-height: 60px;
+    text-align: start;
+    white-space: nowrap;
+}
+
+.navbar ul li:hover{
+    background: rgb(255, 0, 64);
+}
+
+.awesome{
+    height: 40px;
+    width:  40px;
+}
+
+/* a{
     color: white;
     text-decoration: none;
 }
@@ -32,9 +100,9 @@ ul{
     align-items: center;
     height: 60px;
     background-color:  rgb(201, 33, 33);
-}
+} */
 
-.navbar{
+/* .navbar{
     display: flex;
     justify-content: center;
     width: 100%;
@@ -56,7 +124,9 @@ ul{
     padding-left:  131.3px;
     padding-right: 131.3px;
     display: inline;
-}
+} */
+
+/* Top of page */
 
 .topPage{
     padding: 5px;
