--- a/services/services.css
+++ b/services/services.css
@@ -147,7 +147,7 @@ h1{
 
 .price-box {
     width: 300px;
-    height: 400px;
+    height: 450px;
     background-color: #c95959;
     margin: 15px;
     border-radius: 30px;
@@ -166,23 +166,26 @@ h1{
     color: black;
 }
 
-.price-box li {
-    margin: 8px 0px 8px 0px;
+.price-box #li {
+    margin-bottom: 8px;
 }
 
-.price-box li img {
-    width: 125px;
-    height: 125px;
-    padding: 0;
-    margin: 0;
+.img-con {
     display: flex;
     justify-content: center;
-    align-content: flex-end;
-    margin-left: 30%;
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
+    padding: 0;
 }
 
+.img img{
+    display: flex;
+}
+
+
 .silver {
-    height: 300px;
+    height: 350px;
     background-color: #C0C0C0;
 }
 
@@ -191,7 +194,7 @@ h1{
 }
 
 .gold {
-    height: 350px;
+    height: 400px;
     background-color: #FFD700;
 }
 
@@ -261,20 +264,38 @@ p{
     width: 100px;
     height: 80px;
     font-size: 25px;
-    font-family: 'Mulish', sans-serif;
+    font-family: 'ZCOOL KuaiLe', cursive;
     background-color: rgb(0, 132, 255);
+    box-shadow: 5px 5px rgb(48, 48, 48);
     border-radius: 15px;
     color: black;
 }
 
 .order-button button:active {
+    font-family: 'ZCOOL KuaiLe', cursive;
     background-color: black;
-    color: rgb(0, 132, 255);
+    width: 100px;
+    height: 80px;
+    color: #5C1C20;
+    transition-duration: .3s;
+    box-shadow: 0px 0px rgb(48, 48, 48);
+    padding: 0px;
+    border: none;
+    border-radius: 15px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+}
+
+.order-button button:hover {
+    font-family: 'ZCOOL KuaiLe', cursive;
+    background-color: black;
+    color: #E1444E;
     transition-duration: .3s;
     padding: 0px;
     border: none;
     border-radius: 15px;
-    box-shadow: 0 9px rgb(71, 0, 0);
+    
     text-align: center;
     cursor: pointer;
     outline: none;
