--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ h1{
 
 /* Home Page */
 .home{
+    padding-top: 30px;
     padding-bottom: 30px;
     display: flex;
     justify-content: center;
@@ -161,10 +162,10 @@ h1{
 }
 
 .welcome-text {
-    display: flex;
-    justify-content: center;
     text-align: center;
     margin: 0 auto;
+    background-image: url(https://images.pexels.com/photos/96420/pexels-photo-96420.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+    height: 1000px;
 }
 
 #welcome-heading {
@@ -173,12 +174,112 @@ h1{
     padding-top: 15px;
 }
 
+.about {
+    text-align: center;
+    margin: 0 auto;
+    width: 1100px;
+    height: 200px;
+    background-color: #3380B0;
+    opacity: .8;
+    border-radius: 50px;
+}
+
+#about-text {
+    padding-top: 15px;
+    font-size: 1rem;
+    text-align: center;
+}
+
 .homepage{
-    display: flex;
     background-color: rgb(177, 38, 38);
     height: 1000px;
     width: 70%;
 }
+
+.box-wrap {
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+
+.box-1 {
+    background-color: #a15703;
+    width: 300px;
+    height: 400px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    opacity: .8;
+    border-radius: 50px;
+}
+
+.book-img {
+    width: 100px;
+    height: 100px;
+    margin: 5px 0px 0px 0px;
+}
+
+#box-header {
+    font-size: 2rem;
+    margin: 0;
+}
+
+.box-1-text {
+    padding-top: 0px;
+    margin: 0;
+}
+
+.order-button{
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    padding: 5px;
+}
+
+.order-button button {
+    width: 80px;
+    height: 40px;
+    font-size: 20px;
+    font-family: 'ZCOOL KuaiLe', cursive;
+    background-color: rgb(0, 132, 255);
+    box-shadow: 5px 5px rgb(48, 48, 48);
+    border-radius: 15px;
+    color: black;
+}
+
+.order-button button:active {
+    font-family: 'ZCOOL KuaiLe', cursive;
+    background-color: black;
+    width: 70px;
+    height: 30px;
+    color: #5C1C20;
+    transition-duration: .3s;
+    box-shadow: 0px 0px rgb(48, 48, 48);
+    padding: 0px;
+    border: none;
+    border-radius: 15px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+}
+
+.order-button button:hover {
+    font-family: 'ZCOOL KuaiLe', cursive;
+    background-color: black;
+    color: #E1444E;
+    transition-duration: .3s;
+    padding: 0px;
+    border: none;
+    border-radius: 15px;
+    
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+}
+
+#wide-button {
+    width: 130px;
+}
+
 
 .display{
     height: 40%;    
