--- a/booking/book.css
+++ b/booking/book.css
@@ -125,14 +125,29 @@ img{
 }
 
 h1{
+    position: absolute;
     color: white;
-    margin: auto;
-    font-size: 70px;
-    background-color: red;
+    /* margin: auto; */
+    font-size: 50px;
+    /* background-color: rgb(226, 19, 19); */
     padding-left: 20px;
     padding-right: 20px;
-    border-radius: 50px;
+    width: 50%;
+    /* border-radius: 50px; */
 }
+
+.header{
+    width: 500px;
+    height: 190px;
+    transition: 1s;
+}
+
+/* .header:hover{
+    background-color: rgb(240, 35, 35);
+    width: 700px;
+    border-radius: 10px;
+} */
+
 
 /* Home Page */
 .home{
@@ -169,6 +184,91 @@ p{
     padding: 0;
 }
 
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+    background-color: rgb(0, 0, 0);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid rgb(255, 0, 0);
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.tot{
+    height: 50px;
+    font-family: sans-serif;
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    background-color: rgb(177, 38, 38);
+}
+
+p{
+    transition: 0.3s;
+    width: 40%;
+}
+
+p:hover{
+    width: 50%;
+    background-color: rgb(231, 18, 18);
+}
 
 /* Footer */
 
